<resources>
    <string name="app_name">News Guardian</string>

    <string name="no_internet">Check your internet connection!</string>
    <string name="no_article">No news available found, please come back later and try again!</string>
    <string name="no_date">No date</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="no_author">Author unknown</string>

    <string name="settings_num_articles_label">Number of articles</string>
    <string name="settings_num_articles_key" translatable="false">num_articles</string>
    <string name="settings_num_articles_default" translatable="false">10</string>
    <string name="books">Books</string>
    <string name="business">Business</string>
    <string name="fashion">Fashion</string>
    <string name="games">Games</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="money">Money</string>
    <string name="science">Science</string>
    <string name="sport">Sport</string>
    <string name="technology">Technology</string>
    <string name="travel">Travel</string>
    <string name="text_news">News</string>

</resources>
